--- a/style.css
+++ b/style.css
@@ -1,13 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 body * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
 #result {
     width: 500px;
     margin: 20px;
-    border: solid 1px  black;
+    border: solid 1px black;
     padding: 10px;
 }
 
@@ -28,6 +31,7 @@ body * {
     text-align: right;
 
 }
+
 #weather-icon__title span {
     font-size: 0.5em;
     font-weight: bold;
